# MERIDIAN

./: .gitignore  LICENSE  README.md  main.py  meridian_controller.py  requirements.txt
MERIDIAN-call-whatever-i-want/: README.md  pyproject.toml  stepper.py
MERIDIAN-call-whatever-i-want/stepper_module/: __init__.py  stepper.py  udp.py
MERIDIAN-infra/: README.md  mediamtx.yml
MERIDIAN-infra/external-device/: rtp-audio-broadcaster.sh  select-audio-monitor.sh
MERIDIAN-infra/rpi/: docker-compose.yml  mediamtx.yml  rtp-audio-listener.sh
MERIDIAN-rpi/: README.md
MERIDIAN-voice/: README.md  keyword_detector.py  meridian_sleep.onnx  pyproject.toml  requirements.txt
MERIDIAN-voice/voice_module/: __init__.py  keyword_detector.py  meridian_wake.onnx
MERIDIAN-web/: .env.example  README.md  TODO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
MERIDIAN-web/src/: main.tsx
MERIDIAN-web/src/components/: HomeButton.tsx
MERIDIAN-web/src/pages/: App.tsx  Call.tsx  Client.tsx  External.tsx  Home.tsx  Internal.tsx  Publisher.tsx
MERIDIAN-web/src/styles/: global.css
MERIDIAN-web/src/utils/: index.ts  webRTC-helpers.ts
MERIDIAN-yolo/: README.md  pyproject.toml  yolo_inference.py
MERIDIAN-yolo/yolo_module/: __init__.py  yolo_inference.py
