[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice_module"
version = "0.1.0"
description = "Wake word detection"
authors = [{name = "MERIDIAN"}]
requires-python = ">=3.8"
dependencies = [
    "openwakeword>=0.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pydub>=0.25.1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
voice_module = ["*.onnx"]
