[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_module"
version = "0.1.0"
description = "YOLO-based person tracking for MERIDIAN"
authors = [{name = "MERIDIAN"}]
requires-python = ">=3.8"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
yolo_module = ["*.pt"]
